--- a/bld/test/ut/libpal/libpal-posix-ut-shared.vcxitems.filters
+++ b/bld/test/ut/libpal/libpal-posix-ut-shared.vcxitems.filters
@@ -37,6 +37,9 @@
     <ClCompile Include="$(MSBuildThisFileDirectory)..\..\..\..\test\ut\pal\pal_sk_posix_ut.c">
       <Filter>src</Filter>
     </ClCompile>
+    <ClCompile Include="$(MSBuildThisFileDirectory)..\..\..\..\test\ut\pal\pal_cred_stub_ut.c.c">
+      <Filter>src</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="$(MSBuildThisFileDirectory)..\..\..\..\inc\util_ut.h">
