Add trace log zone

--- a/bld/src/proxyd/log.config
+++ b/bld/src/proxyd/log.config
@@ -20,4 +20,4 @@ error="%d(%T).%ms [%t] %V %m [%U:%L]%n"
 #pal_ws.debug >stdout ;trace
 #io_ws.debug >stdout ;trace
 
-*.!debug >stdout
+*.info >stdout
