--- a/api/csharp/samples/provider/relay/src/Microsoft.Azure.Devices.Proxy.Relay/Microsoft.Azure.Devices.Proxy.Relay.csproj
+++ b/api/csharp/samples/provider/relay/src/Microsoft.Azure.Devices.Proxy.Relay/Microsoft.Azure.Devices.Proxy.Relay.csproj
@@ -1,10 +1,10 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <Description>The Hy-Co stream provider is an alternative stream channel provider for Azure IoT Gateway proxy.</Description>
-    <AssemblyTitle>Service Bus Hy-Co stream provider implementation for Azure IoT proxy</AssemblyTitle>
-    <VersionPrefix>0.1.4</VersionPrefix>
-    <Version>0.1.4-preview</Version>
+    <Description>An Azure Relay based sample stream provider for Azure IoT Gateway device proxy.</Description>
+    <AssemblyTitle>Azure Relay based stream provider sample for Azure Device Proxy</AssemblyTitle>
+    <VersionPrefix>1.0.0</VersionPrefix>
+    <Version>1.0.0</Version>
     <Authors>microsoft</Authors>
     <TargetFrameworks>net46;net45;netstandard1.3</TargetFrameworks>
     <NoWarn>$(NoWarn);1591;1734</NoWarn>
@@ -32,7 +32,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Azure.Relay" Version="0.1.4-preview" />
+    <PackageReference Include="Microsoft.Azure.Relay" Version="1.0.0" />
   </ItemGroup>
 
   <ItemGroup Condition=" '$(TargetFramework)' == 'net46' ">
