--- a/api/csharp/samples/provider/relay/src/Microsoft.Azure.Devices.Proxy.Relay/Microsoft.Azure.Devices.Proxy.Relay.csproj
+++ b/api/csharp/samples/provider/relay/src/Microsoft.Azure.Devices.Proxy.Relay/Microsoft.Azure.Devices.Proxy.Relay.csproj
@@ -32,17 +32,15 @@
     <ProjectReference Include="..\..\..\..\..\src\Microsoft.Azure.Devices.Proxy\Microsoft.Azure.Devices.Proxy.csproj" />
   </ItemGroup>
 
-  <ItemGroup>
-    <PackageReference Include="Microsoft.Azure.Relay" Version="1.0.0" />
-  </ItemGroup>
-
   <ItemGroup Condition=" '$(TargetFramework)' == 'net46' ">
+    <PackageReference Include="Microsoft.Azure.Relay" Version="1.0.0" />
     <PackageReference Include="WindowsAzure.ServiceBus" Version="4.1.1" />
     <Reference Include="System" />
     <Reference Include="Microsoft.CSharp" />
   </ItemGroup>
 
   <ItemGroup Condition=" '$(TargetFramework)' == 'net45' ">
+    <PackageReference Include="Microsoft.Azure.Relay" Version="1.0.0" />
     <PackageReference Include="WindowsAzure.ServiceBus" Version="4.1.1" />
     <Reference Include="System" />
     <Reference Include="Microsoft.CSharp" />
@@ -69,10 +67,11 @@
   </PropertyGroup>
 
   <ItemGroup Condition=" '$(TargetFramework)' == 'netstandard1.3' ">
-    <PackageReference Include="system.xml.xpath.xmldocument" Version="4.3.0" />
+    <PackageReference Include="System.Xml.XPath.XmlDocument" Version="4.3.0" />
     <PackageReference Include="System.Xml.XmlDocument" Version="4.3.0" />
     <PackageReference Include="System.Reflection.TypeExtensions" Version="4.3.0" />
-    <PackageReference Include="System.Runtime.Serialization.Json" Version="4.0.1.0" />
-  </ItemGroup>
 
+    <PackageReference Include="Microsoft.Azure.Relay" Version="1.0.0">
+    </PackageReference>
+  </ItemGroup>
 </Project>
