More code review feedback

--- a/bld/test/ut/libpal/libpal-linux-ut-shared.vcxitems.filters
+++ b/bld/test/ut/libpal/libpal-linux-ut-shared.vcxitems.filters
@@ -19,7 +19,7 @@
     <ClCompile Include="$(MSBuildThisFileDirectory)..\..\..\..\test\ut\pal\pal_net_linux_ut.c">
       <Filter>src</Filter>
     </ClCompile>
-    <ClCompile Include="$(MSBuildThisFileDirectory)..\..\..\..\test\ut\pal\pal_rand_linux_ut.c.c">
+    <ClCompile Include="$(MSBuildThisFileDirectory)..\..\..\..\test\ut\pal\pal_rand_linux_ut.c">
       <Filter>src</Filter>
     </ClCompile>
     <ClCompile Include="$(MSBuildThisFileDirectory)..\..\..\..\test\ut\pal\pal_cred_gnome_ut.c">
