Replace old gw with edge

--- a/api/csharp/samples/provider/webapp/src/Microsoft.Azure.Devices.Proxy.AspNet/Microsoft.Azure.Devices.Proxy.AspNet.csproj
+++ b/api/csharp/samples/provider/webapp/src/Microsoft.Azure.Devices.Proxy.AspNet/Microsoft.Azure.Devices.Proxy.AspNet.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <Description>The Asp.NET Core websocket stream provider is an alternative stream channel provider for Azure IoT Gateway proxy.</Description>
+    <Description>The Asp.NET Core websocket stream provider is an alternative stream channel provider for Azure IoT Edge OPC proxy.</Description>
     <AssemblyTitle>Asp.NET Core websocket stream provider implementation for Azure IoT proxy</AssemblyTitle>
     <VersionPrefix>0.2.0</VersionPrefix>
     <Version>0.2.0</Version>
@@ -13,11 +13,11 @@
     <AssemblyName>Microsoft.Azure.Devices.Proxy.AspNet</AssemblyName>
     <PackageId>Microsoft.Azure.Devices.Proxy.AspNet</PackageId>
     <PackageTags>Azure;IoT;.NET;websocket;Proxy</PackageTags>
-    <PackageReleaseNotes>https://github.com/Azure/iot-gateway-proxy/releases</PackageReleaseNotes>
-    <PackageProjectUrl>https://github.com/Azure/iot-gateway-proxy</PackageProjectUrl>
-    <PackageLicenseUrl>https://raw.githubusercontent.com/Azure/iot-gateway-proxy/master/LICENSE</PackageLicenseUrl>
+    <PackageReleaseNotes>https://github.com/Azure/iot-edge-opc-proxy/releases</PackageReleaseNotes>
+    <PackageProjectUrl>https://github.com/Azure/iot-edge-opc-proxy</PackageProjectUrl>
+    <PackageLicenseUrl>https://raw.githubusercontent.com/Azure/iot-edge-opc-proxy/master/LICENSE</PackageLicenseUrl>
     <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
-    <RepositoryUrl>https://github.com/Azure/azure-iot-proxy</RepositoryUrl>
+    <RepositoryUrl>https://github.com/Azure/iot-edge-opc-proxy</RepositoryUrl>
     <NetStandardImplicitPackageVersion>1.6.1</NetStandardImplicitPackageVersion>
     <GenerateAssemblyTitleAttribute>true</GenerateAssemblyTitleAttribute>
     <GenerateAssemblyDescriptionAttribute>true</GenerateAssemblyDescriptionAttribute>
