Fix alpine and valgrind issues in unit tests

--- a/bld/test/ut/libproxy/CMakeLists.txt
+++ b/bld/test/ut/libproxy/CMakeLists.txt
@@ -35,6 +35,7 @@ set(_PROXY_UNITS_UNDER_TEST
     prx_client
     prx_server
     prx_buffer
+    prx_browse
     prx_log
     prx_ns
     prx_sched
