Fix relay bug, fix precise build

--- a/bld/docker/Dockerfile.debian-wheezy
+++ b/bld/docker/Dockerfile.debian-wheezy
@@ -8,7 +8,7 @@ RUN \
             build-essential \
             libcurl4-openssl-dev \
             git \
-            libssl-dev
+            libssl-dev \
     && \
         wget https://cmake.org/files/v3.6/cmake-3.6.3.tar.gz \
     && \
