Revert back to poll

--- a/bld/src/libproxy/CMakeLists.txt
+++ b/bld/src/libproxy/CMakeLists.txt
@@ -60,7 +60,7 @@ if(WIN32)
         set(_PAL_COMPONENTS ${_PAL_COMPONENTS} pal_ws_win)
     endif()
     if(${use_dnssd})
-        set(_PAL_COMPONENTS ${_PAL_COMPONENTS} pal_sd_mdns pal_ev_win)
+        set(_PAL_COMPONENTS ${_PAL_COMPONENTS} pal_sd_mdns pal_ev_poll)
         set(_PAL_DEP_LIBS ${_PAL_DEP_LIBS} dnssd)
         set(_PAL_DEP_INC ${_PAL_DEP_INC} PUBLIC ${_DNSSD_ROOT}/src)
         message(STATUS "  linking with dnssd")
