--- a/bld/src/libproxy/libproxy-win32-static.vcxproj.filters
+++ b/bld/src/libproxy/libproxy-win32-static.vcxproj.filters
@@ -54,7 +54,7 @@
     <ClCompile Include="..\..\..\src\pal\pal_sd_mdns.c">
       <Filter>src</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\..\src\pal\pal_ev_poll.c">
+    <ClCompile Include="..\..\..\src\pal\pal_ev_win.c">
       <Filter>src</Filter>
     </ClCompile>
   </ItemGroup>
