Configure cmake to dbus-libaries for cross compile build on linux-armhf target
Signed-off-by: Juergen Kosel <juergen.kosel@softing.com>

--- a/bld/src/proxyd/CMakeLists.txt
+++ b/bld/src/proxyd/CMakeLists.txt
@@ -62,6 +62,7 @@ if(CMAKE_CROSSCOMPILING)
     target_link_libraries(proxyd ${P11_KIT_LIBRARY})
     target_link_libraries(proxyd ${TASN1_LIBRARY})
     target_link_libraries(proxyd ${FFI_LIBRARY})
+    target_link_libraries(proxyd ${DBUS_LIBRARY})
   endif()
 endif()
 
