Link against avahi libraries while cross compiling
As found in issue #43, the proxyd does not work correctly without
the recently added avahi-support.
But the pkg-config tool is not reliable while cross compiling.
Therefore force linking against avahi-libraries.
It is better, that building fails, than to have a not working binary after
a build which seemed okay.

Signed-off-by: Juergen Kosel <juergen.kosel@softing.com>

--- a/bld/src/libproxy/CMakeLists.txt
+++ b/bld/src/libproxy/CMakeLists.txt
@@ -117,9 +117,18 @@ else()
             set(_PAL_DEP_INC ${_PAL_DEP_INC} ${LIBAVAHI_INCLUDEDIR})
             set(_PAL_COMPONENTS ${_PAL_COMPONENTS} pal_sd_avahi)
             message(STATUS "  linking with avahi-client")
-        else()
-            set(_PAL_COMPONENTS ${_PAL_COMPONENTS} pal_sd_stub)
-            message(AUTHOR_WARNING "no mdns/dnssd - install avahi-client!")
+          else()
+            if(CMAKE_CROSSCOMPILING)
+              # As mentioned in the bottom of
+              # https://cmake.org/Wiki/CMake_Cross_Compiling
+              # the pkg-config tool can not be used by cmake while cross compiling.
+              set(_PAL_DEP_LIBS ${_PAL_DEP_LIBS} avahi-client avahi-common)
+              set(_PAL_COMPONENTS ${_PAL_COMPONENTS} pal_sd_avahi)
+              message(STATUS "  linking with forced avahi-client")
+            else()
+              set(_PAL_COMPONENTS ${_PAL_COMPONENTS} pal_sd_stub)
+              message(AUTHOR_WARNING "no mdns/dnssd - install avahi-client!")
+            endif()
         endif()
     else()
         set(_PAL_COMPONENTS ${_PAL_COMPONENTS} pal_sd_stub)
