restricted ports feature, and various fixes, including valgrind

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,3 +1,4 @@
+version: 0.2.0.{build}
 environment:
   matrix:
     - proxy: no_zlog 
@@ -16,16 +17,14 @@ environment:
       build_args: --use-zlog
     - proxy: default_x64
       build_args: -p x64 --use-zlog
-image: Visual Studio 2015
+image: Visual Studio 2017
 install:
   - git submodule update --init
   - ps: Start-FileDownload 'https://libwebsockets.org:444/Win32OpenSSL-1_0_2h.exe'
   - cmd /c Win32OpenSSL-1_0_2h.exe /silent /verysilent /sp- /suppressmsgboxes
-  - ps: Start-FileDownload 'https://go.microsoft.com/fwlink/?linkid=843448' -FileName dotnet_1_1_1_install.exe
-  - cmd /c dotnet_1_1_1_install.exe /install /quiet /norestart
 build:
 build_script:
-  - bld\build.cmd --vs 14 -c %build_args%
+  - bld\build.cmd -c %build_args%
 cache:
   - C:\OpenSSL-Win32
 matrix:
