Fix appveyor build

--- a/bld/src/libproxy/CMakeLists.txt
+++ b/bld/src/libproxy/CMakeLists.txt
@@ -340,11 +340,11 @@ else()
     )
 endif()
 if(${use_lws})
-    target_link_libraries(libproxy-static PRIVATE websockets_shared)
+    target_link_libraries(libproxy-static PUBLIC websockets_shared)
 endif()
 if(${use_openssl})
-    target_compile_definitions(libproxy-static PRIVATE USE_OPENSSL=1)
-    target_link_libraries(libproxy-static PRIVATE ${OPENSSL_LIBRARIES})
+    target_compile_definitions(libproxy-static PUBLIC USE_OPENSSL=1)
+    target_link_libraries(libproxy-static PUBLIC ${OPENSSL_LIBRARIES})
 endif()
     target_link_libraries(libproxy-static PUBLIC ${_PAL_DEP_LIBS})
 
