--- a/appveyor.yml
+++ b/appveyor.yml
@@ -2,19 +2,19 @@ version: 0.2.0.{build}
 environment:
   matrix:
     - proxy: no_zlog 
-      build_args: --skip-unittests --skip-dotnet 
+      build_args: -p Win32 --skip-unittests --skip-dotnet 
     - proxy: no_zlog_x64
       build_args: -p x64 --skip-unittests --skip-dotnet 
     - proxy: with_openssl
-      build_args: --skip-unittests --skip-dotnet --use-openssl
+      build_args: -p Win32 --skip-unittests --skip-dotnet --use-openssl
     - proxy: with_openssl_x64
       build_args: -p x64 --skip-unittests --skip-dotnet --use-openssl
     - proxy: with_libwebsockets
-      build_args: --skip-unittests --skip-dotnet --use-libwebsockets
+      build_args: -p Win32 --skip-unittests --skip-dotnet --use-libwebsockets
     - proxy: with_libwebsockets_x64
       build_args: -p x64 --skip-unittests --skip-dotnet --use-libwebsockets
     - proxy: default
-      build_args: --use-zlog
+      build_args: -p Win32 --use-zlog
     - proxy: default_x64
       build_args: -p x64 --use-zlog
 image: Visual Studio 2017
@@ -25,5 +25,7 @@ install:
 build:
 build_script:
   - bld\build.cmd -c %build_args%
+cache:
+  - C:\OpenSSL-Win32
 matrix:
     fast_finish: true
