--- a/api/csharp/samples/simple/dns/Browser.csproj
+++ b/api/csharp/samples/simple/dns/Browser.csproj
@@ -4,12 +4,11 @@
     <VersionPrefix>0.2.1</VersionPrefix>
     <Description>Simple Dns Browser sample application</Description>
     <AssemblyTitle>Simple Dns Browser sample</AssemblyTitle>
-    <TargetFrameworks>netcoreapp1.0;netcoreapp1.1;net46</TargetFrameworks>
+    <TargetFrameworks>netcoreapp1.1;net46</TargetFrameworks>
     <AssemblyName>Browser</AssemblyName>
     <OutputType>Exe</OutputType>
     <PackageId>Browser</PackageId>
-    <RuntimeFrameworkVersion Condition=" '$(TargetFramework)' == 'netcoreapp1.0' ">1.0.4</RuntimeFrameworkVersion>
-    <RuntimeFrameworkVersion Condition=" '$(TargetFramework)' == 'netcoreapp1.1' ">1.1.1</RuntimeFrameworkVersion>
+    <RuntimeFrameworkVersion Condition=" '$(TargetFramework)' == 'netcoreapp1.1' ">1.1.2</RuntimeFrameworkVersion>
     <GenerateAssemblyTitleAttribute>true</GenerateAssemblyTitleAttribute>
     <GenerateAssemblyDescriptionAttribute>true</GenerateAssemblyDescriptionAttribute>
     <GenerateAssemblyConfigurationAttribute>true</GenerateAssemblyConfigurationAttribute>
