--- a/api/csharp/samples/simple/tcp/Simple.csproj
+++ b/api/csharp/samples/simple/tcp/Simple.csproj
@@ -4,12 +4,11 @@
     <VersionPrefix>0.2.1</VersionPrefix>
     <Description>Simple TCP/IP client sample application</Description>
     <AssemblyTitle>Simple TCP/IP client sample</AssemblyTitle>
-    <TargetFrameworks>netcoreapp1.0;netcoreapp1.1;net46</TargetFrameworks>
+    <TargetFrameworks>netcoreapp1.1;net46</TargetFrameworks>
     <AssemblyName>Simple</AssemblyName>
     <OutputType>Exe</OutputType>
     <PackageId>Simple</PackageId>
-    <RuntimeFrameworkVersion Condition=" '$(TargetFramework)' == 'netcoreapp1.0' ">1.0.4</RuntimeFrameworkVersion>
-    <RuntimeFrameworkVersion Condition=" '$(TargetFramework)' == 'netcoreapp1.1' ">1.1.1</RuntimeFrameworkVersion>
+    <RuntimeFrameworkVersion Condition=" '$(TargetFramework)' == 'netcoreapp1.1' ">1.1.2</RuntimeFrameworkVersion>
     <GenerateAssemblyTitleAttribute>true</GenerateAssemblyTitleAttribute>
     <GenerateAssemblyDescriptionAttribute>true</GenerateAssemblyDescriptionAttribute>
     <GenerateAssemblyConfigurationAttribute>true</GenerateAssemblyConfigurationAttribute>
