--- a/api/csharp/samples/opc-ua/test/Client/Client.csproj
+++ b/api/csharp/samples/opc-ua/test/Client/Client.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <VersionPrefix>0.2.4</VersionPrefix>
+    <VersionPrefix>1.0.0</VersionPrefix>
     <TargetFrameworks>netcoreapp1.1;net46</TargetFrameworks>
     <AssemblyName>Client</AssemblyName>
     <OutputType>Exe</OutputType>
@@ -19,7 +19,7 @@
   <ItemGroup>
     <ProjectReference Include="..\..\..\provider\relay\src\Microsoft.Azure.Devices.Proxy.Relay\Microsoft.Azure.Devices.Proxy.Relay.csproj" />
     <ProjectReference Include="..\..\..\provider\webapp\test\Host\Microsoft.Azure.Devices.Proxy.Kestrel.csproj" />
-    <ProjectReference Include="..\..\src\Microsoft.Azure.Devices.Opc.Ua.Proxy\Microsoft.Azure.Devices.Opc.Ua.Proxy.csproj" />
+    <ProjectReference Include="..\..\src\Microsoft.Azure.Devices.Proxy.Opc.Ua\Microsoft.Azure.Devices.Proxy.Opc.Ua.csproj" />
   </ItemGroup>
 
   <ItemGroup>
